show ai summary

--- a/middleware/templates/index.html
+++ b/middleware/templates/index.html
@@ -8,6 +8,7 @@
                 <li>
                     <h2>{{ entry[1] }}</h2>
                     <a href="{{ entry[2] }}" target="_blank">{{ entry[2] }}</a>
+                    <p>{{ entry[7] }}</p>
                 </li>
             {% endfor %}
         </ul>
